# -parkapi-sources-v3--herrenberg

./: .gitignore  CHANGELOG.md  HEAD~3  LICENCE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: build-publish.yml  lint-test.yml  lint.yml
data/: freiburg.geojson  heidelberg.geojson  mannheim.geojson  ulm.geojson
dev/: parkapi.py  test-pull-converter.py  test-push-converter.py
src/parkapi_sources/: __init__.py  _version.py  exceptions.py  parkapi_sources.py
src/parkapi_sources/converters/: __init__.py
src/parkapi_sources/converters/a81_p_m/: __init__.py  converter.py  models.py
src/parkapi_sources/converters/bahn_v2/: converter.py  mapper.py  validators.py
src/parkapi_sources/converters/base_converter/: __init__.py  base_converter.py
src/parkapi_sources/converters/base_converter/pull/: __init__.py  pull_converter.py  pull_scraper_mixin.py
src/parkapi_sources/converters/base_converter/pull/static_geojson_data_mixin/: __init__.py  mixin.py  models.py
src/parkapi_sources/converters/base_converter/push/: __init__.py  csv_converter.py  json_converter.py  normalized_xlsx_converter.py  parkapi_json_converter.py  push_converter.py  xlsx_converter.py  xml_converter.py
src/parkapi_sources/converters/bfrk/: __init__.py  base_converter.py  bike_converter.py  bike_models.py  car_converter.py
src/parkapi_sources/converters/bfrk_bw/: __init__.py  base_converter.py  base_models.py  bike_converter.py  bike_models.py  car_converter.py  car_models.py
src/parkapi_sources/converters/bietigheim_bissingen/: __init__.py  converter.py  models.py
src/parkapi_sources/converters/ellwangen/: __init__.py  converter.py
src/parkapi_sources/converters/freiburg/: __init__.py  converter.py  models.py
src/parkapi_sources/converters/heidelberg/: __init__.py  converter.py  models.py  validators.py
src/parkapi_sources/converters/herrenberg/: __init__.py  converter.py  mapper.py  validation.py
src/parkapi_sources/converters/karlsruhe/: __init__.py  converter.py  models.py
src/parkapi_sources/converters/karlsruhe/files/: ca.crt.pem
src/parkapi_sources/converters/kienzler/: __init__.py  converter.py  models.py
src/parkapi_sources/converters/konstanz_bike/: __init__.py  converter.py  models.py
src/parkapi_sources/converters/mannheim/: __init__.py  converter.py
src/parkapi_sources/converters/mannheim_buchen/: __init__.py  converter.py  models.py
src/parkapi_sources/converters/neckarsulm/: __init__.py  converter.py  models.py
src/parkapi_sources/converters/neckarsulm_bike/: __init__.py  converter.py
src/parkapi_sources/converters/pam_bw/: __init__.py  converter.py
src/parkapi_sources/converters/pbw/: converter.py  mapper.py  validation.py
src/parkapi_sources/converters/pforzheim/: __init__.py  converter.py  validation.py
src/parkapi_sources/converters/pum_bw/: __init__.py  converter.py
src/parkapi_sources/converters/radvis_bw/: __init__.py  converter.py  models.py
src/parkapi_sources/converters/reutlingen/: __init__.py  converter.py  validation.py
src/parkapi_sources/converters/reutlingen_bike/: __init__.py  converter.py  validation.py
src/parkapi_sources/converters/stuttgart/: __init__.py  converter.py
src/parkapi_sources/converters/ulm/: __init__.py  converter.py
src/parkapi_sources/converters/vrn/: __init__.py  converter.py  validator.py
src/parkapi_sources/converters/vrs_p_r/: __init__.py  vrs_p_r.py
src/parkapi_sources/models/: __init__.py  enums.py  parking_site_inputs.py  source_info.py  xlsx_inputs.py
src/parkapi_sources/scripts/: parkapi.py
src/parkapi_sources/util/: __init__.py  config_helper.py  encoding.py
src/parkapi_sources/validators/: __init__.py  boolean_validators.py  date_validator.py  datetime_validator.py  decimal_validators.py  integer_validators.py  list_validator.py  string_validators.py
tests/: conftest.py
tests/converters/: a81_p_m_test.py  bahn_v2_test.py  bfrk_bw_test.py  bfrk_test.py  bietigheim_bissingen_test.py  conftest.py  ellwangen_test.py  freiburg_test.py  heidelberg_test.py  helper.py  herrenberg_test.py  karlsruhe_bike_test.py  karlsruhe_test.py  kienzler_test.py  konstanz_bike_test.py  mannheim_buchen_test.py  mannheim_test.py  neckarsulm_bike_test.py  neckarsulm_test.py  pam_bw_test.py  pbw_test.py  pforzheim_test.py  pum_bw_test.py  radvis_bw_test.py  reutlingen_bike_test.py  reutlingen_test.py  stuttgart_test.py  ulm_test.py  vrn_test.py  vrs_p_r_test.py
tests/converters/data/: a81_p_m.json  bahn_v2.json  bfrk_bw_bike.csv  bfrk_car.csv  bietigheim-bissingen.csv  buchen.json  ellwangen.xlsx  freiburg.json  heidelberg.json  herrenberg.json  karlsruhe.json  karlsruhe_bike.json  kienzler.json  konstanz_bike.csv  mannheim.html  mannheim.json  neckarsulm.csv  neckarsulm_bike.csv  pforzheim.json  pum_bw.xlsx  radvis_bw.json  reutlingen.csv  reutlingen_bike.csv  stuttgart-realtime.xml  stuttgart-static.xml  ulm.html  vrn.csv  vrs_p_r.xlsx
tests/converters/data/pbw/: catalog-city.json  object-by-city-10.json  object-by-city-11.json  object-by-city-12.json  object-by-city-15.json  object-by-city-17.json  object-by-city-18.json  object-by-city-19.json  object-by-city-31.json  object-by-city-32.json  object-by-city-33.json  object-by-city-34.json  object-by-city-4.json  object-by-city-42.json  object-by-city-48.json  object-by-city-49.json  object-by-city-51.json  object-by-city-52.json  object-by-city-60.json  object-by-city-61.json  object-by-city-7.json  object-by-city-71.json  object-by-city-9.json  object-dynamic-all.json
tests/models/: xlsx_inputs_test.py
tests/util/: data_xml_helper.py  encoding_test.py  xml_helper_test.py
tests/validators/: boolean_validators_test.py  date_validators_test.py  datetime_validators_test.py  integer_validators_test.py  noneable_tests.py  string_validators_test.py  time_validators_test.py
